<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.arkticor</groupId>
  <artifactId>common</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>common</name>
  <description>Common library</description>
  <url>https://github.com/yixianwang/ark-common</url>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>yixianwang</id>
      <name>Yixian Wang</name>
      <email>wangyixian.wyx@gmail.com</email>
      <roles>
        <role>Architect</role>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>
  <modules>
    <module>common-core</module>
    <module>common-spring-boot-starter</module>
    <module>common-sandbox</module>
  </modules>
  <scm>
    <connection>scm:git:git@github.com:yixianwang/ark-common.git</connection>
    <developerConnection>scm:git:git@github.com:yixianwang/ark-common.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/yixianwang/ark-common</url>
  </scm>
  <properties>
    <java.version>25</java.version>
    <spring-boot.version>4.0.0</spring-boot.version>
    <spotless.version>2.43.0</spotless.version>
    <lombok.version>1.18.42</lombok.version>
    <slf4j.version>2.0.16</slf4j.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless.version}</version>
        <configuration>
          <java>
            <eclipse>
              <version>4.33</version>
            </eclipse>
          </java>
          <pom>
            <sortPom></sortPom>
          </pom>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>25</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
